Refactor RecipeModelTest to use getFirst() for clarity and improve exception handling assertions